--- a/Calculator/Properties/Settings.settings
+++ b/Calculator/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Calculator.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="WidthForm" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">894</Value>
+    </Setting>
+    <Setting Name="HeightForm" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">792</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
