--- a/Calculator/App.config
+++ b/Calculator/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Calculator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Calculator.Properties.Settings>
+            <setting name="WidthForm" serializeAs="String">
+                <value>894</value>
+            </setting>
+            <setting name="HeightForm" serializeAs="String">
+                <value>792</value>
+            </setting>
+        </Calculator.Properties.Settings>
+    </userSettings>
 </configuration>
